* Improve moves synchronisation on shipments
* Allow move as move's origin
* Open product quantities by warehouse to show moves

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Don't set default unit price on stock move
* Prefer to pick product from the source location
* Change move attribute of ShipmentReport for a method
* Rename inventory count quantity_resulting to total_quantity

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Add count wizard on inventory
* Remove support for Python 2.7
* Prevent delete lines if inventory is not draft or canceled
* Manage same input and storage location in customer return shipment

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add _stock_move_split context keyword when copying move for split
* Manage same input and storage location in supplier shipment
* Check pending shipment to erase party
* Define how inventory non filled lines are managed
* Do not fill inventory quantity automatically
* Assign supplier return shipment using children when location is a view
* Duplicate "Locations Quantity" into tree and list
* Remove product_ids from products_by_location for grouping_filter
* Add quantities relates on Template
* Allow grouping per product columns to compute quantities

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add flat children option on location
* Raise single warning for move without origin
* Allow to set manual effective date on move
* Improve computation of cost price
* Limit move locations 'child_of' constraints to specific shipment states
* Allow to delete staging move
* Allow to deactivate only empty locations

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add employee on shipments for some states
* Add request state on internal shipment
* Manage same picking/storage and output location

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)