@@ -236,9 +236,7 @@ class ShipmentIn(Workflow, ModelSQL, ModelView):
     @classmethod
     def default_warehouse(cls):
         Location = Pool().get('stock.location')
-        locations = Location.search(cls.warehouse.domain)
-        if len(locations) == 1:
-            return locations[0].id
+        return Location.get_default_warehouse()
 
     @staticmethod
     def default_company():
@@ -995,9 +993,7 @@ class ShipmentOut(Workflow, ModelSQL, ModelView):
     @classmethod
     def default_warehouse(cls):
         Location = Pool().get('stock.location')
-        locations = Location.search(cls.warehouse.domain)
-        if len(locations) == 1:
-            return locations[0].id
+        return Location.get_default_warehouse()
 
     @staticmethod
     def default_company():
@@ -1525,9 +1521,7 @@ class ShipmentOutReturn(Workflow, ModelSQL, ModelView):
     @classmethod
     def default_warehouse(cls):
         Location = Pool().get('stock.location')
-        locations = Location.search(cls.warehouse.domain)
-        if len(locations) == 1:
-            return locations[0].id
+        return Location.get_default_warehouse()
 
     @staticmethod
     def default_company():
