@@ -17,3 +17,4 @@ xml:
     configuration.xml
     period.xml
     message.xml
+    res.xml
